--- a/Prueba/Styles/Header.css
+++ b/Prueba/Styles/Header.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'CustomFont';
+    src: url('../neue-june/Matt Chansky - Neue June Light.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Bold.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Demi.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Medium.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Regular.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Thin.otf') format('opentype');
+    /* Add more src lines if you have different font formats */
+}
+
 header {
     position: fixed;
     top: 0;
@@ -12,7 +23,7 @@ header {
     z-index: 9999;
     transition: background-color 0.6s, color 0.9s;
     /* Add transition properties */
-    font-family: 'Jost', sans-serif;
+    font-family: 'CustomFont', sans-serif;
 }
 
 .logo {
@@ -74,7 +85,7 @@ header {
 }
 
 .nav-links.scroll-left {
-    transform: translateX(-70%);
+    transform: translateX(-58%);
     /* Adjust the value as per your requirement */
 }
 
