--- a/Styles/Body.css
+++ b/Styles/Body.css
@@ -39,7 +39,7 @@
 #RenderImg {
     width: 105%;
     object-fit: cover;
-    animation: fade-in 2s ease-in-out;
+
 }
 
 #gif {
@@ -51,6 +51,7 @@
     object-fit: cover;
     z-index: 1;
     opacity: 10%;
+    animation: fade-in 2s ease-in-out;
 }
 
 .overlay {
@@ -99,15 +100,17 @@
     position: relative;
     border-radius: 10px;
     left: 50%;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: all 150ms linear;
     font-family: 'CustomFont', sans-serif;
+    z-index: 10;
+    animation: fade-in 7s ease-in-out;
 }
 
 #ShopAllButton:hover {
-    background-color: #fff;
-    color: rgb(0, 170, 255);
+    transform: translateY(-5%);
+    background-color: rgb(0, 136, 204);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
-
 
 
 
@@ -138,7 +141,7 @@
 }
 
 #BeneficiosTitle {
-    font-size: 2.5rem;
+    font-size: 3.3vw;
     color: white;
     margin-bottom: -3%;
     font-family: 'CustomFont-Bold', sans-serif;
@@ -362,7 +365,7 @@
 
 
 #FAQs {
-    height: 100vh;
+    height: 103vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -378,26 +381,32 @@
 }
 
 #FAQsTitle {
-    font-size: 5vw;
+    font-size: 4.5vw;
     text-align: center;
     color: white;
-    margin-top: -5%;
-
+    position: sticky;
+    margin-top: -3%;
 }
 
 #Preguntas {
-    width: 36.5vw;
+    width: 39vw;
     display: flex;
     justify-content: center;
     margin-top: -1%;
-
-    flex-direction: column
+    border: 1px solid white;
+    flex-direction: column;
+    padding: 2%;
+    border-left: hidden;
+    border-right: hidden;
 }
 
 #FAQsPregunta {
     text-align: start;
     font-size: 1.5vw;
+    border-left: 1px solid white;
+    padding-left: 2.35%;
 }
+
 
 .faq-answer {
     display: none;
@@ -409,6 +418,7 @@
 
 .faq-question:hover {
     cursor: pointer;
+    transform: scale(105%);
 
 }
 
@@ -439,7 +449,7 @@
 }
 
 #SocialsTitle {
-    font-size: 5vw;
+    font-size: 4.5vw;
     text-align: center;
     color: white;
     margin-top: -2%;
@@ -448,7 +458,7 @@
 
 #SocialsDescription {
     font-size: 1.3vw;
-    margin-top: -5%;
+    margin-top: -4%;
     text-align: center;
     color: white;
 }
@@ -456,7 +466,8 @@
 #IgLogo {
     background-color: transparent;
     width: 8%;
-    margin-bottom: -3%;
+    margin-bottom: -5%;
+    margin-top: 2%;
     margin-left: -1%;
 }
 
