--- a/Prueba/Prueba/Styles/Body.css
+++ b/Prueba/Prueba/Styles/Body.css
@@ -1,7 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400');
-@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;600;700&display=swap');
+@font-face {
+    font-family: 'CustomFont';
+    src: url('../neue-june/Matt Chansky - Neue June Light.otf') format('opentype'),
 
+        /* url('../neue-june/Matt Chansky - Neue June Demi.otf') format('opentype'),
+
+        url('../neue-june/Matt Chansky - Neue June Medium.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Regular.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Thin.otf') format('opentype'); */
+        /* Add more src lines if you have different font formats */
+}
+
+@font-face {
+    font-family: 'CustomFont-Bold';
+
+    src: url('../neue-june/Matt Chansky - Neue June Bold.otf') format('opentype'),
+        /* Add more src lines if you have different font formats */
+}
 
 
 #BodyContainer {
@@ -9,9 +23,9 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    font-family: 'Jost', sans-serif;
 
 }
+
 
 #Render {
     display: flex;
@@ -25,6 +39,18 @@
 #RenderImg {
     width: 105%;
     object-fit: cover;
+
+}
+
+#gif {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: 1;
+    opacity: 10%;
     animation: fade-in 2s ease-in-out;
 }
 
@@ -40,7 +66,6 @@
     padding: 0;
     height: 30%;
     width: 30%;
-    /* animation: slide-up 1s ease-in-out; */
 }
 
 #ImgTitle {
@@ -57,6 +82,11 @@
     position: relative;
     left: 25%;
     animation: slide-up 5s ease-in-out;
+    font-family: 'CustomFont', sans-serif;
+}
+
+#PolarDescription strong {
+    font-family: 'CustomFont-Bold', sans-serif;
 }
 
 #ShopAllButton {
@@ -70,14 +100,17 @@
     position: relative;
     border-radius: 10px;
     left: 50%;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: all 150ms linear;
+    font-family: 'CustomFont', sans-serif;
+    z-index: 10;
+    animation: fade-in 7s ease-in-out;
 }
 
 #ShopAllButton:hover {
-    background-color: #fff;
-    color: rgb(0, 170, 255);
+    transform: translateY(-5%);
+    background-color: rgb(0, 136, 204);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
-
 
 
 
@@ -90,6 +123,7 @@
     align-items: center;
     flex-direction: column;
     margin-top: 20%;
+    font-family: 'CustomFont', sans-serif;
 }
 
 #BannerBeneficios {
@@ -107,16 +141,17 @@
 }
 
 #BeneficiosTitle {
-    font-size: 2rem;
+    font-size: 3.3vw;
     color: white;
     margin-bottom: -3%;
-    font-weight: bold;
+    font-family: 'CustomFont-Bold', sans-serif;
 }
 
 #BeneficiosDescription {
-    font-size: 1.rem;
+    font-size: 1rem;
     color: white;
 }
+
 
 #BenefitsLeft {
     position: absolute;
@@ -228,17 +263,19 @@
     width: 105%;
     position: relative;
     left: -3%;
+    font-family: 'CustomFont', sans-serif;
 }
 
 #ProductsTitle {
-    font-size: 5vw;
+    font-size: 4.5vw;
     text-align: center;
     margin-top: 5%;
     color: #121212;
+    /* font-family: 'CustomFont-Bold', sans-serif; */
 }
 
 #ProductsDescription {
-    font-size: 1.3vw;
+    font-size: 1.2vw;
     margin-top: -5%;
     text-align: center;
     color: #121212;
@@ -253,35 +290,36 @@
 }
 
 #divProduct {
-    height: 45vh;
+    height: 55vh;
     margin-top: 15%;
     position: relative;
 
 }
 
 #fotoProduct1 {
-    height: 120%;
-    width: 75%;
-    margin-top: -15%;
+    height: 150%;
+    width: 110%;
+    margin-top: -25%;
+    margin-left: -5%;
 }
 
 #fotoProduct2 {
-    height: 75%;
-    width: 26%;
-    margin-top: -5%;
+    height: 105%;
+    width: 40%;
+    margin-top: -12%;
 
 }
 
 #fotoProduct3 {
-    height: 80%;
-    width: 28%;
-    margin-top: -5%;
+    height: 105%;
+    width: 40%;
+    margin-top: -12%;
 
 }
 
 .slide-legend {
     position: absolute;
-    bottom: 10%;
+    bottom: 5%;
     left: 0;
     right: 0;
     color: #fff;
@@ -315,6 +353,9 @@
     /* Adjust the margin as needed */
 }
 
+#ProductTitle {
+    margin-top: 5%;
+}
 
 
 
@@ -322,15 +363,69 @@
 
 
 
-#Sorteo {
-    height: 100vh;
+
+#FAQs {
+    height: 103vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: #121212;
     margin-top: 10%;
+    z-index: 1;
+    width: 105.5%;
+    position: relative;
+    left: -3%;
+    color: white;
+    font-family: 'CustomFont', sans-serif;
 }
+
+#FAQsTitle {
+    font-size: 4.5vw;
+    text-align: center;
+    color: white;
+    position: sticky;
+    margin-top: -3%;
+}
+
+#Preguntas {
+    width: 39vw;
+    display: flex;
+    justify-content: center;
+    margin-top: -1%;
+    border: 1px solid white;
+    flex-direction: column;
+    padding: 2%;
+    border-left: hidden;
+    border-right: hidden;
+}
+
+#FAQsPregunta {
+    text-align: start;
+    font-size: 1.5vw;
+    border-left: 1px solid white;
+    padding-left: 2.35%;
+}
+
+
+.faq-answer {
+    display: none;
+    text-align: justify;
+    font-size: 1.2vw;
+    color: grey;
+
+}
+
+.faq-question:hover {
+    cursor: pointer;
+    transform: scale(105%);
+
+}
+
+.faq-question.active .faq-answer {
+    display: block;
+}
+
 
 
 
@@ -349,19 +444,21 @@
     width: 105.5%;
     position: relative;
     left: -3%;
+    font-family: 'CustomFont', sans-serif;
 
 }
 
 #SocialsTitle {
-    font-size: 5vw;
+    font-size: 4.5vw;
     text-align: center;
     color: white;
     margin-top: -2%;
+
 }
 
 #SocialsDescription {
     font-size: 1.3vw;
-    margin-top: -5%;
+    margin-top: -4%;
     text-align: center;
     color: white;
 }
@@ -369,7 +466,9 @@
 #IgLogo {
     background-color: transparent;
     width: 8%;
-    margin-bottom: -3%;
+    margin-bottom: -5%;
+    margin-top: 2%;
+    margin-left: -1%;
 }
 
 #DivFotos {
