--- a/Prueba/Prueba/Styles/Header.css
+++ b/Prueba/Prueba/Styles/Header.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'CustomFont';
+    src: url('../neue-june/Matt Chansky - Neue June Light.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Bold.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Demi.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Medium.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Regular.otf') format('opentype'),
+        url('../neue-june/Matt Chansky - Neue June Thin.otf') format('opentype');
+    /* Add more src lines if you have different font formats */
+}
+
 header {
     position: fixed;
     top: 0;
@@ -12,7 +23,7 @@ header {
     z-index: 9999;
     transition: background-color 0.6s, color 0.9s;
     /* Add transition properties */
-    font-family: 'Jost', sans-serif;
+    font-family: 'CustomFont', sans-serif;
 }
 
 .logo {
@@ -28,9 +39,9 @@ header {
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 10%;
-    margin-left: -65%;
-    font-size: 1.3vw;
+    gap: 5%;
+    margin-left: -43%;
+    font-size: 1.1vw;
     color: white;
 }
 
@@ -74,8 +85,9 @@ header {
 }
 
 .nav-links.scroll-left {
-    transform: translateX(-70%);
+    transform: translateX(-28%);
     /* Adjust the value as per your requirement */
+    font-size: 1.2vw;
 }
 
 .nav-links.scroll-left li a::before {
